--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -17,10 +17,8 @@ jobs:
 
       - name: Push to GitLab
         run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
           git remote add gitlab git@gitlab.com:pfe20243/mirroringrepo.git
           git push gitlab main
         env:
-          GITLAB_TOKEN: ${{ secrets.GITLAB_ACCESS_TOKEN }}
+          GITLAB_TOKEN: ${{ secrets.MY_ACCESS_SECRET }}
 
