--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -17,10 +17,8 @@ jobs:
 
       - name: Push to GitLab
         run: |
-          git clone https://gitlab.com/pfe20243/mirroringrepo.git repo
+          git clone git@gitlab.com:pfe20243/mirroringrepo.git repo
           cd repo
-          git config --global user.email "rachedwassim.bassel@effyis-partners.ma"
-          git config --global user.username "bvssel"
           git push origin main
         env:
           GITLAB_TOKEN: ${{ secrets.MY_ACCESS_SECRET }}
