commit with external token/credentials

--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -17,6 +17,8 @@ jobs:
 
       - name: Push to GitLab
         run: |
+          git config user.email rachedwassim.bassel@effyis-partners.ma
+          git config user.username bvssel
           git clone https://bvssel:$MY_ACCESS_SECRET_repo@gitlab.com/pfe20243/mirroringrepo.git
         env:
           EXTERNAL_TOKEN: ${{ secrets.MY_ACCESS_SECRET_repo }}
