--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -19,6 +19,8 @@ jobs:
         run: |
           git config user.email rachedwassim.bassel@effyis-partners.ma
           git config user.username bvssel
-          git clone https://bvssel:$GITHUB_TOKEN@gitlab.com/pfe20243/mirroringrepo.git
+          git remote add gitlab 'https://bvssel:$GITHUB_TOKEN@gitlab.com/pfe20243/mirroringrepo.git'
+          git pull --rebase -X theirs gitlab main 
+          git push --force gitlab HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.token }}
