--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -17,10 +17,8 @@ jobs:
 
       - name: Push to GitLab
         run: |
-          git config user.email rachedwassim.bassel@effyis-partners.ma
           git config user.name bvssel
-          git remote add gitlab 'https://bvssel:$token@gitlab.com/pfe20243/mirroringrepo.git'
-          git pull --rebase -X theirs gitlab main 
-          git push --force gitlab HEAD:main
+          git config user.email rachedwassim.bassel@effyis-partners.ma
+          # git remote add gitlab 'https://bvssel:$token@gitlab.com/pfe20243/mirroringrepo.git'
         env:
           token: ${{ secrets.token }}
