last commit miroringhhqq

--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -20,7 +20,7 @@ jobs:
           git config user.name bvssel
           git config user.email rachedwassim.bassel@effyis-partners.ma
           git remote add gitlab 'https://bvssel:${{ secrets.token }}@gitlab.com/pfe20243/mirroringrepo.git'
-          # git pull --rebase -X theirs gitlab main 
+          git pull --rebase -X theirs gitlab main 
           # git push --force gitlab HEAD:main
         env:
           token: ${{ secrets.token }}
