--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -9,18 +9,36 @@ on:
       - main
 
 jobs:
-  mirror:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v1
+    - name: Mirror + trigger CI
+      uses: SvanBoxel/gitlab-mirror-and-ci-action@master
+      with:
+        args: "https://gitlab.com/pfe20243/mirroring.git"
+      env:
+        FOLLOW_TAGS: "false"
+        FORCE_PUSH: "false"
+        GITLAB_HOSTNAME: "gitlab.com"
+        GITLAB_USERNAME: "bvssel"
+        GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
+        GITLAB_PROJECT_ID: "55314047" 
+        GITHUB_TOKEN: ${{ secrets.token }}
 
-      - name: Push to GitLab
-        run: |
-          git config user.name bvssel
-          git config user.email rachedwassim.bassel@effyis-partners.ma
-          git remote add gitlab 'https://bvssel:${{ secrets.token }}@gitlab.com/pfe20243/mirroring.git'
-          git pull --rebase -X theirs gitlab main 
-          git push --force gitlab main
-        env:
-          token: ${{ secrets.token }}
+# jobs:
+#   mirror:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Push to GitLab
+#         run: |
+#           git config user.name bvssel
+#           git config user.email rachedwassim.bassel@effyis-partners.ma
+#           git remote add gitlab 'https://bvssel:${{ secrets.token }}@gitlab.com/pfe20243/mirroring.git'
+#           git pull --rebase -X theirs gitlab main 
+#           git push --force gitlab main
+#         env:
+#           token: ${{ secrets.token }}
