--- a/.github/workflows/mirroringfile.yml
+++ b/.github/workflows/mirroringfile.yml
@@ -1,12 +1,6 @@
 name: Mirror to GitLab
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+on: [push]
 
 jobs:
   build:
@@ -23,7 +17,7 @@ jobs:
         GITLAB_HOSTNAME: "gitlab.com"
         GITLAB_USERNAME: "bvssel"
         GITLAB_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
-        GITLAB_PROJECT_ID: "55314047" 
+        GITLAB_PROJECT_ID: "55314047"
         GITHUB_TOKEN: ${{ secrets.token }}
 
 # jobs:
