--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,7 @@ variables:
 
 stages:
   - build
-  - test
   - dockerize
-  - deploy
 
 build:
   stage: build
@@ -16,14 +14,6 @@ build:
   artifacts:
     paths:
       - target/*.jar
-  tags:
-    - pipe-petclinic-runner
-
-test:
-  stage: test
-  image: maven:3.6.3-openjdk-17
-  script:
-    - mvn test
   tags:
     - pipe-petclinic-runner
 
@@ -37,19 +27,63 @@ dockerize:
   script:
     - docker build -t $DOCKER_USERNAME/petclinic:latest .
     - docker push $DOCKER_USERNAME/petclinic:latest
+  dependencies:
+    - build
   tags:
     - pipe-petclinic-runner
 
-deploy:
-  stage: deploy
-  image: docker:stable
-  services:
-    - docker:dind
-  before_script:
-    - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-  script:
-    - docker pull $DOCKER_USERNAME/petclinic:latest
-    - docker run -d -p 8080:8080 --name petclinic $DOCKER_USERNAME/petclinic:latest
-  tags:
-    - pipe-petclinic-runner
+# variables:
+#   DOCKER_USERNAME: "bassel10"
+#   DOCKER_PASSWORD: "wassim123"
+
+# stages:
+#   - build
+#   - test
+#   - dockerize
+#   - deploy
+
+# build:
+#   stage: build
+#   image: maven:3.6.3-openjdk-17
+#   script:
+#     - mvn clean package -DskipTests
+#   artifacts:
+#     paths:
+#       - target/*.jar
+#   tags:
+#     - pipe-petclinic-runner
+
+# test:
+#   stage: test
+#   image: maven:3.6.3-openjdk-17
+#   script:
+#     - mvn test
+#   tags:
+#     - pipe-petclinic-runner
+
+# dockerize:
+#   stage: dockerize
+#   image: docker:stable
+#   services:
+#     - docker:dind
+#   before_script:
+#     - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+#   script:
+#     - docker build -t $DOCKER_USERNAME/petclinic:latest .
+#     - docker push $DOCKER_USERNAME/petclinic:latest
+#   tags:
+#     - pipe-petclinic-runner
+
+# deploy:
+#   stage: deploy
+#   image: docker:stable
+#   services:
+#     - docker:dind
+#   before_script:
+#     - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+#   script:
+#     - docker pull $DOCKER_USERNAME/petclinic:latest
+#     - docker run -d -p 8080:8080 --name petclinic $DOCKER_USERNAME/petclinic:latest
+#   tags:
+#     - pipe-petclinic-runner
 
