--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ dockerize:
   tags:
     - pipe-petclinic-runner
 
+# Editeddd
 # variables:
 #   DOCKER_USERNAME: "bassel10"
 #   DOCKER_PASSWORD: "wassim123"
