--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ dockerize:
   tags:
     - docker-runner
 
-# Editeddd
+# edited 22
 # variables:
 #   DOCKER_USERNAME: "bassel10"
 #   DOCKER_PASSWORD: "wassim123"
