--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,36 +1,45 @@
-variables:
-  DOCKER_USERNAME: "bassel10"
-  DOCKER_PASSWORD: "wassim123"
-
-stages:
-  - build
-  - dockerize
-
-build:
-  stage: build
-  image: maven:3.6.3-openjdk-17
-  script:
-    - mvn clean package -DskipTests
-  artifacts:
-    paths:
-      - target/*.jar
-  tags:
-    - pipe-petclinic-runner
-
-dockerize:
-  stage: dockerize
+check_docker_connection:
+  stage: test_docker_connection
   image: docker:stable
-  services:
-    - docker:dind
-  before_script:
-    - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
   script:
-    - docker build -t $DOCKER_USERNAME/petclinic:latest .
-    - docker push $DOCKER_USERNAME/petclinic:latest
-  dependencies:
-    - build
+    - docker ps
   tags:
     - docker-runner
+
+
+# variables:
+#   DOCKER_USERNAME: "bassel10"
+#   DOCKER_PASSWORD: "wassim123"
+
+# stages:
+#   - build
+#   - dockerize
+
+# build:
+#   stage: build
+#   image: maven:3.6.3-openjdk-17
+#   script:
+#     - mvn clean package -DskipTests
+#   artifacts:
+#     paths:
+#       - target/*.jar
+#   tags:
+#     - pipe-petclinic-runner
+
+# dockerize:
+#   stage: dockerize
+#   image: docker:stable
+#   services:
+#     - docker:dind
+#   before_script:
+#     - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+#   script:
+#     - docker build -t $DOCKER_USERNAME/petclinic:latest .
+#     - docker push $DOCKER_USERNAME/petclinic:latest
+#   dependencies:
+#     - build
+#   tags:
+#     - docker-runner
 
 # edited 33
 # variables:
