--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,28 +32,25 @@ dockerize:
   tags:
     - docker-runner
 
-# edited 22121
-# variables:
-#   DOCKER_USERNAME: "bassel10"
-#   DOCKER_PASSWORD: "wassim123"
+deploy:
+  stage: deploy
+  image: docker:stable
+  services:
+    - docker:dind
+  before_script:
+    - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  script:
+    - docker pull $DOCKER_USERNAME/petclinic:latest
+    - docker run -d -p 8080:8080 --name petclinic $DOCKER_USERNAME/petclinic:latest
+  tags:
+    - pipe-petclinic-runner
 
 # stages:
 #   - build
 #   - test
 #   - dockerize
 #   - deploy
-
-# build:
-#   stage: build
-#   image: maven:3.6.3-openjdk-17
-#   script:
-#     - mvn clean package -DskipTests
-#   artifacts:
-#     paths:
-#       - target/*.jar
-#   tags:
-#     - pipe-petclinic-runner
-
+# 
 # test:
 #   stage: test
 #   image: maven:3.6.3-openjdk-17
@@ -61,7 +58,7 @@ dockerize:
 #     - mvn test
 #   tags:
 #     - pipe-petclinic-runner
-
+# 
 # dockerize:
 #   stage: dockerize
 #   image: docker:stable
@@ -74,17 +71,3 @@ dockerize:
 #     - docker push $DOCKER_USERNAME/petclinic:latest
 #   tags:
 #     - pipe-petclinic-runner
-
-# deploy:
-#   stage: deploy
-#   image: docker:stable
-#   services:
-#     - docker:dind
-#   before_script:
-#     - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-#   script:
-#     - docker pull $DOCKER_USERNAME/petclinic:latest
-#     - docker run -d -p 8080:8080 --name petclinic $DOCKER_USERNAME/petclinic:latest
-#   tags:
-#     - pipe-petclinic-runner
-
