--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,13 @@
 version: "2.2"
 
 services:
+  petclinic:
+    image: bassel10/petclinic:latest
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=prod
+    restart: always
   mysql:
     image: mysql:8.2
     ports:
